sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: missing parameter type
  } while (ecart=>1 || !parcours)
           ^AlgCombSort:19: error: value || is not a member of Int
  } while (ecart=>1 || !parcours)
                    ^